# music-tools

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: setup-hooks.sh
src/: app.rs  config.rs  file_dialog.rs  lib.rs  main.rs  message.rs  metadata.rs  model.rs  settings.rs  theme.rs  view.rs
src/utils/: audio_converter.rs  audio_player.rs  metadata_editor.rs  mod.rs  music_downloader.rs  scraper.rs
