[package]
name = "music-tools"
version = "0.2.2"
edition = "2021"
description = "Music Tools - A multi-utility suite for music file management"
authors = ["Your Name"]
license = "MIT"

[dependencies]
iced = { version = "0.12", features = ["svg", "tokio"] }
iced_aw = { version = "0.9", default-features = false, features = ["icons"] }
lofty = "0.19"
walkdir = "2.4"
rfd = "0.14"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["cookies", "json", "rustls-tls"], default-features = false }
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.10"
url = "2.5"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
rodio = "0.17"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt"] }
